--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@react-pdf/renderer": "^3.1.14",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
     "next": "14.0.3",
