--- a/package.json
+++ b/package.json
@@ -1,36 +1,30 @@
 {
   "name": "gorbatiuk-com",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint -c .eslintrc.json --ext .js,.jsx,.ts,.tsx src --quiet --fix"
   },
   "dependencies": {
-    "@chakra-ui/next-js": "^2.2.0",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@react-pdf/renderer": "^3.1.14",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.14",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.48.2",
-    "react-icons": "^4.12.0"
+    "@react-pdf/renderer": "4.1.5",
+    "next": "15.0.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "15.0.3",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^3.1.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.5.3"
 }
